WIP: initial commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "outDir": "build",
     "module": "commonjs",
     "target": "es5",
-    "lib": ["es5", "scripthost", "dom", "es2015"],
+    "downlevelIteration": true,
+    "lib": ["es5", "scripthost", "dom", "es2015", "es2017"],
     "sourceMap": true,
     "inlineSourceMap": false,
     "inlineSources": false,
