--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.4.3",
+    "@types/webmidi": "^2.0.3",
     "autobind-decorator": "^2.4.0",
     "chalk": "^2.4.2",
     "es6-promise": "^4.2.8",
@@ -157,9 +158,6 @@
     "moduleDirectories": [
       "node_modules",
       "./"
-    ],
-    "setupFilesAfterEnv": [
-      "./src/app/helpers/JestBootstrap.ts"
     ]
   }
 }
