--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
 {
-  "app.js": "/public/js/app.927281178b6603c8eefb.js",
-  "vendors~app.js": "/public/js/vendors~app.d0cf81d2f67bc639079b.js"
+  "app.js": "/piano_keys_midi_api/public/js/app.17b4fa0418a742d1a4b7.js",
+  "vendors~app.js": "/piano_keys_midi_api/public/js/vendors~app.d0cf81d2f67bc639079b.js"
 }
