--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.4.3",
+    "@types/recharts": "^1.1.21",
     "@types/webmidi": "^2.0.3",
     "autobind-decorator": "^2.4.0",
     "chalk": "^2.4.2",
@@ -129,6 +130,7 @@
     "react-helmet": "^5.2.1",
     "react-redux": "^7.1.0",
     "react-router5": "^7.1.0",
+    "recharts": "^1.7.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-router5": "^7.0.2",
